kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-same-namespace
  namespace: devops-app
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
